--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,6 +4,7 @@
  body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
+  font-display: swap;
   color: #333;
   margin: 0;
   padding: 0;
