--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -1,19 +1,19 @@
-.jumbo-section{
-  font-family: 'Sriracha', cursive;
- 
-  .jumbo{
+.jumbo-section {
+  font-family: "Sriracha", cursive;
 
-    .card-subtitle{
+  .jumbo {
+    .card-subtitle {
       @media screen and (max-width: 415px) {
-        font-size:2em;
-    
+        font-size: 2em;
       }
       @media screen and (min-width: 415px) and (max-width: 768px) {
         font-size: 2em;
-    
       }
-      @media screen and (min-width: 992px) {
-        font-size: 2.5em;
+      @media screen and (min-width: 992px) and (max-width: 1439px) {
+        font-size: 2em;
+      }
+      @media screen and (min-width: 1440px) {
+        font-size: 3em;
       }
       @media screen and (min-width: 768px) and (max-width: 992px) {
         font-size: 2.5em;
@@ -26,30 +26,26 @@
       // -webkit-text-fill-color: transparent;
       font-weight: bold;
       @media screen and (max-width: 415px) {
-        font-size:5em;
-    
+        font-size: 5em;
       }
       @media screen and (min-width: 415px) and (max-width: 768px) {
         font-size: 5em;
-    
       }
-      @media screen and (min-width: 992px) {
+      @media screen and (min-width: 992px) and (max-width: 1439px) {
+        font-size: 6em;
+      }
+      @media screen and (min-width: 1440px) {
         font-size: 8em;
       }
       @media screen and (min-width: 768px) and (max-width: 992px) {
-        font-size: 6em;
+        font-size: 5em;
       }
-     
     }
-    .card-button{
+    .card-button {
       font-size: 1.2em;
     }
-    
   }
- 
-  
-  
-  
+
   .mobile {
     background-attachment: scroll;
   }
@@ -112,6 +108,4 @@
       background-attachment: scroll;
     }
   }
-  
 }
-
