--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -3,8 +3,11 @@
 
   .jumbo {
     .card-subtitle {
-      @media screen and (max-width: 415px) {
-        font-size: 2em;
+      @media screen and (min-width: 320px) and(max-width:415px){
+        font-size: 1em;
+      }
+      @media screen and (max-width: 330px) {
+        font-size: 1em;
       }
       @media screen and (min-width: 415px) and (max-width: 768px) {
         font-size: 2em;
@@ -25,11 +28,14 @@
       // background-clip: text;
       // -webkit-text-fill-color: transparent;
       font-weight: bold;
-      @media screen and (max-width: 415px) {
-        font-size: 5em;
+      @media screen and (min-width: 320px) and(max-width:415px){
+        font-size: 2em;
+      }
+      @media screen and (max-width: 330px) {
+        font-size: 2em;
       }
       @media screen and (min-width: 415px) and (max-width: 768px) {
-        font-size: 5em;
+        font-size: 4em;
       }
       @media screen and (min-width: 992px) and (max-width: 1439px) {
         font-size: 6em;
