--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -1,114 +1,75 @@
 .jumbo-section {
   font-family: "Sriracha", cursive;
+  position: relative;
 
-  .jumbo {
-    .card-subtitle {
-      @media screen and (min-width: 320px) and(max-width:415px){
-        font-size: 1.5em;
-      }
-      @media screen and (max-width: 330px) {
-        font-size: 1em;
-      }
-      @media screen and (min-width: 415px) and (max-width: 768px) {
-        font-size: 2em;
-      }
-      @media screen and (min-width: 992px) and (max-width: 1439px) {
-        font-size: 2em;
-      }
-      @media screen and (min-width: 1440px) {
-        font-size: 3em;
-      }
-      @media screen and (min-width: 768px) and (max-width: 992px) {
-        font-size: 2.5em;
-      }
-    }
-    .card-title {
-      // background: -webkit-linear-gradient(#fc5c7d, #6a82fb);
-      // -webkit-background-clip: text;
-      // background-clip: text;
-      // -webkit-text-fill-color: transparent;
-      font-weight: bold;
-      @media screen and (min-width: 320px) and(max-width:415px){
-        font-size: 2.5em;
-      }
-      @media screen and (max-width: 330px) {
-        font-size: 3em;
-      }
-      @media screen and (min-width: 415px) and (max-width: 768px) {
-        font-size: 4em;
-      }
-      @media screen and (min-width: 992px) and (max-width: 1439px) {
-        font-size: 6.5em;
-      }
-      @media screen and (min-width: 1440px) {
-        font-size: 8em;
-      }
-      @media screen and (min-width: 768px) and (max-width: 992px) {
-        font-size: 5em;
-      }
-    }
-    .card-button {
-      font-size: 1.2em;
-    }
+  #background-video {
+    min-height: 100vh;
+    min-width: 100vw;
+    z-index: -1;
+    overflow: hidden;
   }
+  .jumbo-wrapper {
+    min-height: 100vh;
+    min-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0%;
+   
+    .jumbo {
+      .card-subtitle {
+        @media screen and (min-width: 320px) and(max-width:415px) {
+          font-size: 1.5em;
+        }
+        @media screen and (max-width: 330px) {
+          font-size: 1em;
+        }
+        @media screen and (min-width: 415px) and (max-width: 768px) {
+          font-size: 2em;
+        }
+        @media screen and (min-width: 992px) and (max-width: 1439px) {
+          font-size: 2em;
+        }
+        @media screen and (min-width: 1440px) {
+          font-size: 3em;
+        }
+        @media screen and (min-width: 768px) and (max-width: 992px) {
+          font-size: 2.5em;
+        }
+      }
+      .card-title {
+        // background: -webkit-linear-gradient(#fc5c7d, #6a82fb);
+        // -webkit-background-clip: text;
+        // background-clip: text;
+        // -webkit-text-fill-color: transparent;
+        font-weight: bold;
+        @media screen and (min-width: 320px) and(max-width:415px) {
+          font-size: 2.5em;
+        }
+        @media screen and (max-width: 330px) {
+          font-size: 3em;
+        }
+        @media screen and (min-width: 415px) and (max-width: 768px) {
+          font-size: 4em;
+        }
+        @media screen and (min-width: 992px) and (max-width: 1439px) {
+          font-size: 6.5em;
+        }
+        @media screen and (min-width: 1440px) {
+          font-size: 8em;
+        }
+        @media screen and (min-width: 768px) and (max-width: 992px) {
+          font-size: 5em;
+        }
+      }
+      .card-button {
+        font-size: 1.2em;
+      }
+    }
 
-  .mobile {
-    background-attachment: scroll;
-  }
-  .chinese {
-  
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-height: 100vh;
-    // background-image: url("https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/asphalt-environment-grass-highway-239520+(1).jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    @media screen and (max-width: 415px) {
-      background-attachment: scroll;
-    }
-    @media screen and (min-width: 415px) and (max-width: 768px) {
-      background-attachment: scroll;
-    }
-    @media screen and (min-width: 992px) {
-      background-attachment: fixed;
-    }
-    @media screen and (min-width: 768px) and (max-width: 992px) {
-      background-attachment: scroll;
-    }
-  }
-  .english {
-    // https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/asphalt-environment-grass-highway-239520+(1).jpg
-    // https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/landscape-photo-of-mountain-with-polar-lights-1434608+(1).jpg
-    // background-image: url("https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/landscape-photo-of-mountain-with-polar-lights-1434608+(1).jpg");
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-height: 100vh;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    @media screen and (max-width: 415px) {
-      background-attachment: scroll;
-    }
-    @media screen and (min-width: 415px) and (max-width: 768px) {
-      background-attachment: scroll;
-    }
-    @media screen and (min-width: 992px) {
-      background-attachment: fixed;
-    }
-    @media screen and (min-width: 768px) and (max-width: 992px) {
+    .mobile {
       background-attachment: scroll;
     }
   }
