--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Poppins|Sriracha&display=swap');
 
  body {
@@ -7,8 +6,7 @@
   font-display: swap;
   color: #333;
   margin: 0;
-  padding: 0;
-  min-height: 100%;
+  min-height: 100vh;
   &::-webkit-scrollbar {
     width: 0.5em;
     background-color: #394041;
