--- a/components/Private/CountDate/countdate.scss
+++ b/components/Private/CountDate/countdate.scss
@@ -5,8 +5,7 @@
   width: 100%;
 }
 .countdown-private{
-  background-image: linear-gradient(rgba(219, 91, 255, 0.3), rgba(224, 70, 255, 0.3)),
-    url("https://storage.pixteller.com/designs/designs-images/2019-03-27/05/love-and-passion-background-backgrounds-romantic-1-5c9b9943567d4.png");
+  background-image: linear-gradient(rgb(239, 179, 255), rgba(240, 167, 255,1));
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
