--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -10,8 +10,9 @@
   justify-content: center;
 
   .love-title {
-    border: 2px solid rgb(245, 218, 83);
-    background-color: rgb(245, 218, 83);
+    // border: 2px solid rgb(245, 218, 83);
+    border: 2px solid rgb(247, 109, 196);
+    background-color: rgb(247, 109, 196);
     font-size: 30px;
     color: white;
     border-radius: 30px;
