--- a/pages/blogs/Blog.scss
+++ b/pages/blogs/Blog.scss
@@ -1,20 +1,16 @@
 .blog {
-  background-image: url("https://res.cloudinary.com/next-bananaboom/image/upload/v1583502690/5cba2aba229c4_thumb900_lhdfkg.jpg");
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  //
+  background-image: url("https://res.cloudinary.com/next-bananaboom/image/upload/v1583943583/WechatIMG11657_tm4odp.jpg");
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: scroll;
-  font-family: 'Sriracha', cursive;
-  
+  font-family: "Sriracha", cursive;
 }
-.shrinked{
+.shrinked {
   height: 70px;
   display: flex;
   transition: 0.2s;
@@ -28,7 +24,7 @@
   justify-content: center;
   align-items: center;
   z-index: 3;
-  &:before{
+  &:before {
     content: "";
     background: rgba(#eb782e, 0);
     position: absolute;
@@ -37,16 +33,16 @@
     right: 0;
     bottom: 0;
     transition: background 400ms;
-}
-&.fixme{
-    &:before{
-        background: rgba(#2e86eb, 0.8);
+  }
+  &.fixme {
+    &:before {
+      background: rgba(#2e86eb, 0.8);
     }
+  }
 }
-}
-.shrinkedHeader{
+.shrinkedHeader {
   display: none;
 }
-.emptyHeight{
-visibility: hidden;
+.emptyHeight {
+  visibility: hidden;
 }
