--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -8,9 +8,7 @@ $blue-color: #00ffe5;
   left: 0;
   z-index: 2;
   background-color: transparent;
-  transition: all 0.5s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  transition: all 0.5s ease-in;
   font-family: "Sriracha", cursive;
   font-size: large;
 
@@ -55,21 +53,15 @@ $blue-color: #00ffe5;
         padding: 5px 20px 5px 20px;
         cursor: pointer;
         color: white;
-        a {
-          color: white;
-          &:hover {
-            color: $blue-color;
-          }
-        }
+        
         &:hover {
           color: $blue-color;
         }
 
         &.hamburger {
           margin-left: auto;
-          z-index: 10;
           height: 40px;
-          margin-top: 20px;
+          margin-top: 10px;
           margin-right: 20px;
           border: 2px solid white;
           border-radius: 50px;
