--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -1,3 +1,4 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css');
 .bg-footer {
   background-color: #149aff;
 }
