--- a/components/Blog/BlogListItem.scss
+++ b/components/Blog/BlogListItem.scss
@@ -43,8 +43,8 @@
   position: absolute;
   z-index: 1;
   bottom: 150%;
-  left: 90%;
-  margin-left: -120px;
+  left: 50%;
+  transform: translate(-50%);
   opacity: 0;
   transition: opacity 0.3s;
   &:after {
