--- a/components/Subscribe/Subscribe.scss
+++ b/components/Subscribe/Subscribe.scss
@@ -1,107 +1,85 @@
-.btn.btn-a {
-  background-color: rgba(61, 204, 89, 1);
-  color: #fff;
-  padding: 0.6rem 0.8rem;
-  letter-spacing: 0.05rem;
-  &:hover {
-    background-color: #333;
-    color: #fff;
+.subscribe-container{
+  .subscribe-wrapper{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    @media screen and (max-width:717px) {
+      flex-direction: column-reverse;
+    }
+    .sayhi{
+      @media screen and (max-width:717px) {
+        text-align: center;
+      }
+    }
+    .subscribe-form{
+      text-align: center;
+      .form-a {
+        .subscribe-button{
+          position: relative;
+          display: inline-block;
+          cursor: pointer;
+        .subscribe-button-text {
+          visibility: hidden;
+          width: 50%;
+          background-color:#ffff;
+          color: rgb(125, 46, 199);
+          border:2px solid rgb(125, 46, 199);
+          text-align: center;
+          padding: 3px;
+          position: absolute;
+          z-index: 1;
+          bottom: 100%;
+          left: 30%;
+          margin-left: -50px;
+          opacity: 0;
+          transition: opacity 0.3s;
+          a{
+            color: rgb(125, 46, 199);
+      
+          }
+          &:after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: rgb(125, 46, 199) transparent transparent transparent;
+          }
+        }
+        &:hover .subscribe-button-text {
+          visibility: visible;
+          opacity: 1;
+        }
+        
+        }
+        label {
+          position: relative;
+        }
+        .form-control {
+          font-size: 1.1rem;
+          font-weight: 300;
+          display: inline-block;
+          background-color: rgb(255, 252, 252);
+          border-radius: 40px;
+          &:focus {
+            border: 3px solid #6a82fb;
+            border-color: #6a82fb;
+            box-shadow: none;
+            outline:none;
+      
+          }
+        }
+        .form-control.form-control-a {
+          height: 3rem;
+          width: 70%;
+        }
+      }
+      
+
+    }
   }
 }
 
-.form-a {
-  &#sendmessage {
-    color: #2eca6a;
-    border: 1px solid #26a356;
-    display: none;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-    margin-bottom: 15px;
-  }
-  &.errormessage {
-    color: red;
-    display: none;
-    border: 1px solid red;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-    margin-bottom: 15px;
-  }
-  &#sendmessage.show,
-  &#errormessage.show,
-  .show {
-    display: block;
-  }
-  .subscribe-button{
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-  .subscribe-button-text {
-    visibility: hidden;
-    width: 50%;
-    background-color:#ffff;
-    color: rgb(125, 46, 199);
-    border:2px solid rgb(125, 46, 199);
-    text-align: center;
-    padding: 3px;
-    position: absolute;
-    z-index: 1;
-    bottom: 100%;
-    left: 30%;
-    margin-left: -50px;
-    opacity: 0;
-    transition: opacity 0.3s;
-    a{
-      color: rgb(125, 46, 199);
-
-    }
-    &:after {
-      content: "";
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      margin-left: -5px;
-      border-width: 5px;
-      border-style: solid;
-      border-color: rgb(125, 46, 199) transparent transparent transparent;
-    }
-  }
-  &:hover .subscribe-button-text {
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  }
-  &.validation {
-    color: red;
-    display: none;
-    margin: 4px 0 20px 0;
-    font-weight: 400;
-    font-size: 13px;
-  }
-  label {
-    position: relative;
-  }
-  select.form-control-lg:not([size]):not([multiple]) {
-    height: 3.5rem;
-  }
-  .form-control {
-    font-size: 1.1rem;
-    font-weight: 300;
-    border-radius: 50px;
-    display: inline-block;
-    border:1px solid black;
-    &:focus {
-      border: 2px solid #6a82fb;
-      border-color: #6a82fb;
-      box-shadow: none;
-      outline:none;
-
-    }
-  }
-  .form-control.form-control-a {
-    height: 3.5rem;
-  }
-}
 
