--- a/components/Contents/Projects/Project.scss
+++ b/components/Contents/Projects/Project.scss
@@ -1,10 +1,11 @@
 .hover {
   transition: transform 0.5s ease, box-shadow 0.5s ease;
   border-radius: 30px;
+  width: 300px;
   &:hover {
     transform: scale(1.03);
-    -webkit-box-shadow: 10px 10px 0px -2px rgba(200, 199, 245, 1);
-    -moz-box-shadow: 10px 10px 0px -2px rgba(200, 199, 245, 1);
-    box-shadow: 10px 10px 0px -2px rgba(200, 199, 245, 1);
+    -webkit-box-shadow: 15px 10px 0px -2px rgba(200, 199, 245, 1);
+    -moz-box-shadow: 15px 10px 0px -2px rgba(200, 199, 245, 1);
+    box-shadow: 15px 10px 0px -2px rgba(200, 199, 245, 1);
   }
 }
