--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,15 +3,24 @@
  body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
   font-display: swap;
   color: #333;
   margin: 0;
   min-height: 100vh;
+  max-width: 100vw;
   &::-webkit-scrollbar {
     width: 0.5em;
     background-color: #394041;
   }
   &::-webkit-scrollbar-thumb {
+    background-color: white;
+  }
+  &::-moz-scrollbar {
+    width: 0.5em;
+    background-color: #394041;
+  }
+  &::-moz-scrollbar-thumb {
     background-color: white;
   }
 }
