--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -30,14 +30,17 @@
   }
   .jumbo-wrapper {
     min-height: 100vh;
-    min-width: 100vw;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: absolute;
     top: 0%;
+    left: 50%;
+    transform: translate(-50%);
     .jumbo {
+      width: 90vw;
       .card-subtitle {
         @media screen and (min-width: 320px) and(max-width:415px) {
           font-size: 2em;
