--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins|Sriracha&display=swap');
-
+html{
  body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -8,7 +8,6 @@
   color: #333;
   margin: 0;
   min-height: 100vh;
-  max-width: 100vw;
   &::-webkit-scrollbar {
     width: 0.5em;
     background-color: #394041;
@@ -44,4 +43,6 @@
 
 .article {
   font-size: 1.2em;
+}
+
 }
