--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -66,7 +66,7 @@
         width: 5px;
       } 
       &::-webkit-scrollbar-thumb {
-        background-color: #333;
+        background-color: rgb(245, 218, 83);
       }
       .private-post-loader{
         padding:200px;
