--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -1,5 +1,5 @@
 .jumbo-section {
-  font-family: "Sriracha", cursive;
+  font-family: "Sriracha",  "Helvetica", "Arial",cursive;
   position: relative;
 
   .background-video {
