--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -5,7 +5,7 @@
   background-attachment: scroll;
   background-size: cover;
   background-position: center;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", "Helvetica", "Arial", sans-serif;
   display: flex;
   justify-content: center;
 
@@ -16,7 +16,7 @@
     font-size: 30px;
     color: white;
     border-radius: 30px;
-    font-family: "Concert One", cursive;
+    font-family: "Concert One", "Helvetica", "Arial", cursive;
     text-transform: uppercase;
     font-weight: 200;
     .heart-purple {
