--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins|Sriracha&display=swap');
 html{
  body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", "Helvetica", "Arial", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   font-display: swap;
