--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -8,8 +8,8 @@ $blue-color: #00ffe5;
   left: 0;
   z-index: 2;
   background-color: transparent;
-  transition: all 0.5s ease-in;
-  font-family: "Sriracha", cursive;
+  transition: transform 0.5s ease-in;
+  font-family: "Sriracha", "Helvetica", "Arial", cursive;
   font-size: large;
 
   .header {
@@ -53,7 +53,7 @@ $blue-color: #00ffe5;
         padding: 5px 20px 5px 20px;
         cursor: pointer;
         color: white;
-        
+
         &:hover {
           color: $blue-color;
         }
