--- a/components/Header/Hamburger/Hamburger.scss
+++ b/components/Header/Hamburger/Hamburger.scss
@@ -3,7 +3,7 @@ $blue-color: #00ffe5;
 .dropdown-mobile-submenu {
   font-weight: 300;
   text-transform: none;
-  right: 10px;
+  right: 5%;
   opacity: 0;
   position: absolute;
   width: 100px;
